# ssh-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  pyproject.toml  to-do_list.md
ssh_manager/: main.py
ssh_manager/models/: connection.py  file_system.py  folder.py
ssh_manager/ui/: input.py
ssh_manager/ui/css/: box.css
ssh_manager/utils/: generate_fs.py  parser_ssh.py
tests/: test_connections.py  test_parser_ssh_config.py  test_version.py
tests/mock_data/: more_ssh  ssh_config  test
