[tool.poetry]
name = "ssh-manager"
version = "0.1.0"
description = ""
authors = ["Aratin Dima <dima.aratin@mail.ru>"]

[tool.poetry.scripts]
start = "ssh_manager.main:main"
test  = "pytest tests {args}"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "2.15.5"
dynaconf = "^3.1.11"
python-json-logger = "^2.0.4"
textual = "^0.32.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pyupgrade = "^3.3.1"
pre-commit = "^3.0.2"
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[tool.mypy]
python_version = "3.10"
ignore_errors = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
